fix: Tried to add platform specific classes of graalvm for macOS build fix